[gd_scene load_steps=3 format=3 uid="uid://b1f2d3e4f5g6h7i8j9k0"]

[ext_resource type="Script" path="res://scripts/ui/MainUI.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_main")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResourceDisplay" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="EnergyLabel" type="Label" parent="VBoxContainer/ResourceDisplay"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Mental Energy: 0"

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/ResourceDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 100.0
value = 50.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer/ResourceDisplay/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Psychology Health"
horizontal_alignment = 1

[node name="HealingProgress" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = true

[node name="HealingLabel" type="Label" parent="VBoxContainer/HealingProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Healing Progress"
horizontal_alignment = 1

[node name="QuickActions" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="HealButton" type="Button" parent="VBoxContainer/QuickActions"]
layout_mode = 2
text = "Start Healing"

[node name="SaveButton" type="Button" parent="VBoxContainer/QuickActions"]
layout_mode = 2
text = "Save Game"

[node name="ProfileButton" type="Button" parent="VBoxContainer/QuickActions"]
layout_mode = 2
text = "Open Profile"

[node name="AreaStatus" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Current Area: Starting Zone"
